--- a/MDS_TFM_CreditRisk.Rmd
+++ b/MDS_TFM_CreditRisk.Rmd
@@ -1,13 +1,13 @@
 ---
-title: "URJC MDS TFM - Financial Credit Risk"
+title: "ANEXO: Riesgo de crédito - Análisis, desarrollo y código"
 author: "Miguel García Sánchez"
 date: "`r Sys.Date()`"
-output:
- html_document:
-  code_folding: hide
-  toc: yes
-  toc_float: TRUE
-  toc_depth: 3 
+output: pdf_document
+#html_document:
+ # code_folding: hide
+  #toc: yes
+  #toc_float: TRUE
+  #toc_depth: 3 
 ---
 
 ```{r setup, include=FALSE}
